=============
MAJOR RELEASE
=============
	+++++++++++++
	MINOR RELEASE
	+++++++++++++
		-------------
		MICRO RELEASE
		-------------

***********************************************************************
** Visit  https://github.com/wtrdrnkr/pyrecon  for additional detail **
***********************************************************************
		-------------
		Version 1.4.3
		-------------

		-------------
		Version 1.4.2
		-------------
		*tools.classes
			-Series.locateDuplicateTraces() no longer considers different named objects to be duplicates
		*tools.curationTool
			-No longer pauses after each curation check

		-------------
		Version 1.4.1
		-------------
		*tools.curationTool
			-fixed adding empty lists in find duplicates
			-fixed extra verbosity

	+++++++++++++
	Version 1.4.0
	+++++++++++++
	*tools.curationTool is now ready for use
		-prints location of duplicate traces, traces separated by a given number of sections, and reverse traces
	*tools.renameFRI
		-removed and no longer developing
	*tools.classes
		-renameObject() added to Series and Section
		-getObject(regex) added to Series and Section
		-locateDistantTraces(), locateReverseTraces(), and locateDuplicates() added to Series
		-isReverse() added to Contour
		
		-------------
		Version 1.3.3
		-------------
		*tools.excelTool
			-fixed error with not recognizing correct trace types/children
		*tools.renameFRI
			-still in dev, full of errors :D
		
		-------------
		Version 1.3.2
		-------------
		*tools.classes.Contour
			-self.overlaps()
				-moved threshold variable to parameter, with default 1+2**(-17)
				-added a checker for Contour._shape population
		*tools.classes.rObject
			-created self.getDendNumber(), self.getProtNumber() to get numbers greater than 2 digits
			-added verbose parameter
		*removed wild-card imports, removed unused imports
		*new renameFRI.py (project for FRI students)
		*tools.mergeTool: