@@ -15,6 +15,7 @@ MAJOR RELEASE
 		-------------
 		Version 1.4.3
 		-------------
+		*moved dev files and/or programs to their own folder. bethBellMerge.py, excelTool-dev.py, mergeTool-dev.py
 
 		-------------
 		Version 1.4.2
